<resources>
    <string name="app_name">FinalWork</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="text_remember_password">记住密码</string>
    <string name="text_login">登陆</string>
    <string name="text_register">注册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">私聊</string>
    <string name="title_notifications">我的</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">圆角的ImageView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>