<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    tools:context=".Activities.LoginActivity">

    <EditText
        android:id="@+id/loginInputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/hint_username"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:inputType="text"
        android:autofillHints="请输入用户名"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginInputPasswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:autofillHints="请输入密码"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputUsername" />

    <CheckBox
        android:id="@+id/loginCheckRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_remember_password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputPasswd" />


    <Button
        android:id="@+id/loginButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="3dp"
        android:gravity="center"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginButtonRegister"
        app:layout_constraintEnd_toStartOf="@+id/loginButtonRegister"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginButtonLogin"
        app:layout_constraintTop_toBottomOf="@+id/loginCheckRememberPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>